--- a/NBE/NBE.vcxproj
+++ b/NBE/NBE.vcxproj
@@ -21,11 +21,13 @@
   <ItemGroup>
     <ClInclude Include="Headers\Camera.h" />
     <ClInclude Include="Headers\Config.h" />
+    <ClInclude Include="Headers\Constant.h" />
     <ClInclude Include="Headers\CustomEvent.h" />
     <ClInclude Include="Headers\DataTypes.h" />
     <ClInclude Include="Headers\DllLoader.h" />
     <ClInclude Include="Headers\Error.h" />
     <ClInclude Include="Headers\Event.h" />
+    <ClInclude Include="Headers\EventHub.h" />
     <ClInclude Include="Headers\Exception.h" />
     <ClInclude Include="Headers\File.h" />
     <ClInclude Include="Headers\Input.h" />
@@ -39,6 +41,7 @@
     <ClInclude Include="Headers\NBEMath.h" />
     <ClInclude Include="Headers\NBETimer.h" />
     <ClInclude Include="Headers\NBEWindow.h" />
+    <ClInclude Include="Headers\NEvent.h" />
     <ClInclude Include="Headers\Node.h" />
     <ClInclude Include="Headers\Object.h" />
     <ClInclude Include="Headers\Quaternion.h" />
@@ -63,6 +66,7 @@
     <ClCompile Include="Sources\Camera.cpp" />
     <ClCompile Include="Sources\Config.cpp" />
     <ClCompile Include="Sources\CustomEvent.cpp" />
+    <ClCompile Include="Sources\EventHub.cpp" />
     <ClCompile Include="Sources\Input.cpp" />
     <ClCompile Include="Sources\KeyBoard.cpp" />
     <ClCompile Include="Sources\Mouse.cpp" />
